--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,4 @@
 
 invalidAgeMessage = Age should be between {lower} - {upper}
 email.empty = Email can't be blank
+email.invalidDomain = Email should be ending with gmail.com
