Passed the key value in the NotEmpty annotation to load the message from the property file whereby the property file pass the key value pair approach

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,3 +4,4 @@
 invalidAgeMessage = Age should be between {lower} - {upper}
 email.empty = Email can't be blank
 email.invalidDomain = Email should be ending with gmail.com
+string.notEmpty = * can not be empty
