--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,4 +4,4 @@
 invalidAgeMessage = Age should be between {lower} - {upper}
 email.empty = Email can't be blank
 email.invalidDomain = Email should be ending with gmail.com
-string.notEmpty = * can not be empty
+string.notEmpty = * {0} can not be empty
