Customizing the age name to User Age dynamically in the property file

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,3 +5,6 @@ invalidAgeMessage = {0} should be between {lower} - {upper}
 email.empty = Email can't be blank
 email.invalidDomain = Email should be ending with gmail.com
 string.notEmpty = * {0} can not be empty
+
+# Customizing the variable name to be loaded dynamically from the property file
+age = User Age
