Loaded the lower and upper values dynamically by passing 1 and 2 in the curly braces dynamically

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,7 @@
 # Key Value Pair
 # Resource Bundles
 
-invalidAgeMessage = {0} should be between {lower} - {upper}
+invalidAgeMessage = {0} should be between {1} - {2}
 email.empty = Email can't be blank
 email.invalidDomain = Email should be ending with gmail.com
 string.notEmpty = * {0} can not be empty
