Passed the key in the Size annotation in the message whereby the message is been loaded from the property file and using the dynamically approach to get the min and max values from the size annotation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,5 +6,8 @@ email.empty = Email can't be blank
 email.invalidDomain = Email should be ending with gmail.com
 string.notEmpty = * {0} can not be empty
 
+userName.size = * Your Name should have char between {min} - {max} character custom
+
+
 # Customizing the variable name to be loaded dynamically from the property file
 age = User Age
