Passed the min and max values dynamically and added the comment and customizing the property names

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,13 +1,16 @@
 # Key Value Pair
 # Resource Bundles
 
+# For Error messages
 invalidAgeMessage = {0} should be between {1} - {2}
 email.empty = Email can't be blank
 email.invalidDomain = Email should be ending with gmail.com
 string.notEmpty = * {0} can not be empty
 
-userName.size = * Your Name should have char between {min} - {max} character custom
+# We are writing in reverse approach because behind the scene spring is sorting the properties
+userName.size = * {0} should have char between {2} - {1} character custom
 
 
-# Customizing the variable name to be loaded dynamically from the property file
+# Customizing the variable name to be loaded dynamically from the properties customization
 age = User Age
+userName = Your name
