Handling the typeMismatch problem in the application by adding the error in the property file

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,6 +10,8 @@ string.notEmpty = * {0} can not be empty
 # We are writing in reverse approach because behind the scene spring is sorting the properties
 userName.size = * {0} should have char between {2} - {1} character custom
 
+typeMismatch.java.lang.Integer = * should be a number
+typeMismatch.userReg.age = * Age should be a number
 
 # Customizing the variable name to be loaded dynamically from the properties customization
 age = User Age
